# leap-motion-x11

./: AUTHORS  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  mylistener.cpp  mylistener.h  smooth.cpp  smooth.h
test/: README.md  sample.py  sample.txt  sample3d.py
